# Reverse-Engineering-Carpentry

./: .gitignore  CMakeLists.txt  README.md
examples/: customstool.txt
src/applications/: exportToColmap.cpp
src/applications/carpentry_optimization/: main.cpp  visualizeSolution.cpp
src/applications/cloudTools/: noisify.cpp  xyz2ply.cpp
src/applications/plane-seg/: main.cpp
src/applications/region-edges/: main.cpp
src/applications/stock-seg/: main.cpp
src/construction/: Constraints.cpp  Constraints.h  Construction.cpp  Construction.h  ConstructionIO.cpp  FeatureExtractor.cpp  FeatureExtractor.h  Solver.cpp  Solver.h  SolverInitialize.cpp  joint_image_analysis.cpp
src/construction/optimization/: alignmentProblem.cpp  alignmentProblem.hpp  discreteMultiObjective.cpp  discreteProblems.hpp  discreteSingleObjective.cpp  maxOverlap.cpp  simulated_annealing.cpp  simulated_annealing.hpp  test_problem.cpp  test_problem.h
src/geometry/: WindingNumberData.h  csg1d.h  fast_winding_number.cpp  fast_winding_number.h  find_affine.cpp  find_affine.h  homographyFromPlane.cpp  homographyFromPlane.h  mesh_interior_point_labeling.cpp  mesh_interior_point_labeling.h
src/geometry/cgal/: alpha_shapes.cpp  convex_hull.cpp  efficient_ransac.cpp  geom.h  min_bbox.cpp  polygon_triangulation.cpp
src/geometry/primitives3/: BoundedPlane.cpp  BoundedPlane.h  Cylinder.cpp  Cylinder.h  MultiRay3d.cpp  MultiRay3d.h  Multimesh.cpp  Multimesh.h  Ray3d.h  SurfaceCompletion.cpp  SurfaceCompletion.h  compute_basis.cpp  compute_basis.h  intersect_planes.cpp  intersect_planes.h
src/geometry/shapes2/: CombinedCurve.cpp  CombinedCurve.h  Curve.cpp  Curve.h  Primitive.cpp  Primitive.h  Ray2d.cpp  Ray2d.h  Segment2d.cpp  Segment2d.h  VoxelGrid.cpp  VoxelGrid.hpp  convert_contour.cpp  convert_contour.h  density_contour.cpp  density_contour.h  find_adjacent_ranges.cpp  find_adjacent_ranges.h  polygon_thickness.cpp  polygon_thickness.h  primitive_thickness.cpp  primitive_thickness.h
src/geometry/shapes2/graphicsgems/: FitCurves.cpp  FitCurves.h
src/imgproc/: DepthSegmentation.cpp  DepthSegmentation.h  dda_foreach.h  display_segmentation.cpp  display_segmentation.h  graph_cut.cpp  graph_cut.h  histogram_matching.cpp  histogram_matching.h  joint_segmentation.cpp  joint_segmentation.h  matching_scores.cpp  matching_scores.h  multilabel_graph_cut.cpp  multilabel_graph_cut.h  region_growing.cpp  region_growing.h
src/imgproc/multilabel/: graph.h  maxflow.cpp
src/math/: GaussianMixture.cpp  GaussianMixture.h  NormalRandomVariable.cpp  NormalRandomVariable.h  RunningAverage.cpp  RunningAverage.h  integration.cpp  integration.h  nonmax_suppression.h  robust_derivative.hpp
src/math/fields/: FieldSlice.cpp  FieldSlice.h  PointDensityField.cpp  PointDensityField.h  ScalarField.h  WindingNumberField3D.cpp  WindingNumberField3D.h
src/reconstruction/: CameraIntrinsics.cpp  CameraIntrinsics.h  Image.cpp  Image.h  Points3D.cpp  Points3D.h  ReconstructionData.cpp  ReconstructionData.h  Solution.cpp  Solution.h  exposuresolver.cpp  exposuresolver.h  mesh_io.cpp  mesh_io.h  parsing.hpp  point_cloud_io.cpp  point_cloud_io.h
src/test/: testGraphCut8way.cpp  test_curve_fit.cpp  test_dda.cpp  test_disparities.cpp  test_geocut.cpp  test_gmm.cpp  test_graph_cut.cpp  test_histogram_matching.cpp  test_integrate.cpp  test_interval_tree.cpp  test_load_reconstruction.cpp  test_marching_squares.cpp  test_matching.cpp  test_math.cpp  test_mesh_interior.cpp  test_multi_segmentation.cpp  test_polygon.cpp  test_scalar_field.cpp  test_triangulate.cpp  test_utils.cpp
src/test/testUtils/: curveFitUtils.cpp  curveFitUtils.h  displaySurfaceCompletion.cpp  displaySurfaceCompletion.h
src/utils/: IntervalTree.h  colorAtIndex.cpp  colorAtIndex.h  color_conversion.hpp  cyclicPermuteRows.h  eigenMatToCV.cpp  eigenMatToCV.h  exceptions.hpp  macros.h  mesh_valid.cpp  mesh_valid.h  printvec.h  settings.cpp  settings.h  sign.h  sorted_data_structures.hpp  test_utils.h  timingMacros.h  top_k_indices.hpp  typedefs.hpp  visualization.cpp  visualization.hpp  vstack.h
src/utils/io/: csvFormat.cpp  csvFormat.h
